--- a/Notebooks/ML_Complex_API.ipynb
+++ b/Notebooks/ML_Complex_API.ipynb
@@ -1904,7 +1904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1913,7 +1913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1978,7 +1978,7 @@
        "      <td>24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18</th>\n",
+       "      <th>1</th>\n",
        "      <td>2022</td>\n",
        "      <td>1</td>\n",
        "      <td>bahrain</td>\n",
@@ -1998,7 +1998,7 @@
        "      <td>24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>2</th>\n",
        "      <td>2022</td>\n",
        "      <td>1</td>\n",
        "      <td>bahrain</td>\n",
@@ -2018,7 +2018,7 @@
        "      <td>27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
+       "      <th>3</th>\n",
        "      <td>2022</td>\n",
        "      <td>1</td>\n",
        "      <td>bahrain</td>\n",
@@ -2038,7 +2038,7 @@
        "      <td>32</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>4</th>\n",
        "      <td>2022</td>\n",
        "      <td>1</td>\n",
        "      <td>bahrain</td>\n",
@@ -2062,54 +2062,55 @@
        "</div>"
       ],
       "text/plain": [
-       "    season  round circuit_id  \\\n",
-       "0     2022      1    bahrain   \n",
-       "18    2022      1    bahrain   \n",
-       "1     2022      1    bahrain   \n",
-       "17    2022      1    bahrain   \n",
-       "2     2022      1    bahrain   \n",
+       "   season  round circuit_id  \\\n",
+       "0    2022      1    bahrain   \n",
+       "1    2022      1    bahrain   \n",
+       "2    2022      1    bahrain   \n",
+       "3    2022      1    bahrain   \n",
+       "4    2022      1    bahrain   \n",
        "\n",
-       "                                                  url          driver  \\\n",
-       "0   http://en.wikipedia.org/wiki/2022_Bahrain_Gran...         leclerc   \n",
-       "18  http://en.wikipedia.org/wiki/2022_Bahrain_Gran...  max_verstappen   \n",
-       "1   http://en.wikipedia.org/wiki/2022_Bahrain_Gran...           sainz   \n",
-       "17  http://en.wikipedia.org/wiki/2022_Bahrain_Gran...           perez   \n",
-       "2   http://en.wikipedia.org/wiki/2022_Bahrain_Gran...        hamilton   \n",
+       "                                                 url          driver  \\\n",
+       "0  http://en.wikipedia.org/wiki/2022_Bahrain_Gran...         leclerc   \n",
+       "1  http://en.wikipedia.org/wiki/2022_Bahrain_Gran...  max_verstappen   \n",
+       "2  http://en.wikipedia.org/wiki/2022_Bahrain_Gran...           sainz   \n",
+       "3  http://en.wikipedia.org/wiki/2022_Bahrain_Gran...           perez   \n",
+       "4  http://en.wikipedia.org/wiki/2022_Bahrain_Gran...        hamilton   \n",
        "\n",
-       "   nationality constructor  grid  podium  driver_points  driver_wins  \\\n",
-       "0   Monegasque     ferrari     1       1              0            0   \n",
-       "18       Dutch    red_bull     2      19              0            0   \n",
-       "1      Spanish     ferrari     3       2              0            0   \n",
-       "17     Mexican    red_bull     4      18              0            0   \n",
-       "2      British    mercedes     5       3              0            0   \n",
+       "  nationality constructor  grid  podium  driver_points  driver_wins  \\\n",
+       "0  Monegasque     ferrari     1       1              0            0   \n",
+       "1       Dutch    red_bull     2      19              0            0   \n",
+       "2     Spanish     ferrari     3       2              0            0   \n",
+       "3     Mexican    red_bull     4      18              0            0   \n",
+       "4     British    mercedes     5       3              0            0   \n",
        "\n",
-       "    driver_standings_pos  constructor_points  constructor_wins  \\\n",
-       "0                      0                   0                 0   \n",
-       "18                     0                   0                 0   \n",
-       "1                      0                   0                 0   \n",
-       "17                     0                   0                 0   \n",
-       "2                      0                   0                 0   \n",
+       "   driver_standings_pos  constructor_points  constructor_wins  \\\n",
+       "0                     0                   0                 0   \n",
+       "1                     0                   0                 0   \n",
+       "2                     0                   0                 0   \n",
+       "3                     0                   0                 0   \n",
+       "4                     0                   0                 0   \n",
        "\n",
-       "    constructor_standings_pos  qualifying_time  driver_age  \n",
-       "0                           0              0.0          24  \n",
-       "18                          0              1.0          24  \n",
-       "1                           0              2.0          27  \n",
-       "17                          0              3.0          32  \n",
-       "2                           0              4.0          37  "
+       "   constructor_standings_pos  qualifying_time  driver_age  \n",
+       "0                          0              0.0          24  \n",
+       "1                          0              1.0          24  \n",
+       "2                          0              2.0          27  \n",
+       "3                          0              3.0          32  \n",
+       "4                          0              4.0          37  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "df.reset_index(inplace = True, drop = True)\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2126,7 +2127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -2181,7 +2182,7 @@
        "      <td>24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18</th>\n",
+       "      <th>1</th>\n",
        "      <td>2022</td>\n",
        "      <td>1</td>\n",
        "      <td>max_verstappen</td>\n",
@@ -2196,7 +2197,7 @@
        "      <td>24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>2</th>\n",
        "      <td>2022</td>\n",
        "      <td>1</td>\n",
        "      <td>sainz</td>\n",
@@ -2211,7 +2212,7 @@
        "      <td>27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
+       "      <th>3</th>\n",
        "      <td>2022</td>\n",
        "      <td>1</td>\n",
        "      <td>perez</td>\n",
@@ -2226,7 +2227,7 @@
        "      <td>32</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>4</th>\n",
        "      <td>2022</td>\n",
        "      <td>1</td>\n",
        "      <td>hamilton</td>\n",
@@ -2245,29 +2246,29 @@
        "</div>"
       ],
       "text/plain": [
-       "    season  round          driver  grid  podium  driver_points  driver_wins  \\\n",
-       "0     2022      1         leclerc     1       1              0            0   \n",
-       "18    2022      1  max_verstappen     2      19              0            0   \n",
-       "1     2022      1           sainz     3       2              0            0   \n",
-       "17    2022      1           perez     4      18              0            0   \n",
-       "2     2022      1        hamilton     5       3              0            0   \n",
+       "   season  round          driver  grid  podium  driver_points  driver_wins  \\\n",
+       "0    2022      1         leclerc     1       1              0            0   \n",
+       "1    2022      1  max_verstappen     2      19              0            0   \n",
+       "2    2022      1           sainz     3       2              0            0   \n",
+       "3    2022      1           perez     4      18              0            0   \n",
+       "4    2022      1        hamilton     5       3              0            0   \n",
        "\n",
-       "    driver_standings_pos  constructor_points  constructor_wins  \\\n",
-       "0                      0                   0                 0   \n",
-       "18                     0                   0                 0   \n",
-       "1                      0                   0                 0   \n",
-       "17                     0                   0                 0   \n",
-       "2                      0                   0                 0   \n",
+       "   driver_standings_pos  constructor_points  constructor_wins  \\\n",
+       "0                     0                   0                 0   \n",
+       "1                     0                   0                 0   \n",
+       "2                     0                   0                 0   \n",
+       "3                     0                   0                 0   \n",
+       "4                     0                   0                 0   \n",
        "\n",
-       "    constructor_standings_pos  driver_age  \n",
-       "0                           0          24  \n",
-       "18                          0          24  \n",
-       "1                           0          27  \n",
-       "17                          0          32  \n",
-       "2                           0          37  "
+       "   constructor_standings_pos  driver_age  \n",
+       "0                          0          24  \n",
+       "1                          0          24  \n",
+       "2                          0          27  \n",
+       "3                          0          32  \n",
+       "4                          0          37  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2278,7 +2279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2297,7 +2298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -2329,32 +2330,8 @@
       "      ricciardo       0.00      0.00      0.00         0\n",
       "         stroll       0.00      0.00      0.00         0\n",
       "         latifi       0.00      0.00      0.00         0\n",
-      "          perez       0.00      0.00      0.00         0\n",
-      "        leclerc       0.00      0.00      0.00         0\n",
-      "          sainz       0.00      0.00      0.00         0\n",
-      " max_verstappen       0.00      0.00      0.00         0\n",
-      "           ocon       0.00      0.00      0.00         0\n",
-      "        russell       0.00      0.00      0.00         0\n",
-      "         alonso       0.00      0.00      0.00         0\n",
-      "         bottas       0.00      0.00      0.00         0\n",
-      "          gasly       0.00      0.00      0.00         0\n",
-      "kevin_magnussen       0.00      0.00      0.00         0\n",
-      "         norris       0.00      0.00      0.00         0\n",
-      "           zhou       0.00      0.00      0.00         0\n",
-      "         stroll       0.00      0.00      0.00         0\n",
-      "      ricciardo       0.00      0.00      0.00         0\n",
-      "       hamilton       0.00      0.00      0.00         0\n",
-      "          albon       0.00      0.00      0.00         0\n",
-      "     hulkenberg       0.00      0.00      0.00         0\n",
-      "         latifi       0.00      0.00      0.00         0\n",
-      "        tsunoda       0.00      0.00      0.00         0\n",
-      "        leclerc       0.00      0.00      0.00         0\n",
-      " max_verstappen       0.00      0.00      0.00         0\n",
-      "          perez       0.00      0.00      0.00         0\n",
-      "         norris       0.00      0.00      0.00         0\n",
-      "       hamilton       0.00      0.00      0.00         0\n",
-      "        russell       0.00      0.00      0.00         0\n",
-      "      ricciardo       0.00      0.00      0.00         0\n",
+      "         vettel       0.00      0.00      0.00         0\n",
+      "       de_vries       0.00      0.00      0.00         0\n",
       "\n",
       "       accuracy                           0.13       428\n",
       "      macro avg       0.02      0.00      0.01       428\n",
@@ -2379,7 +2356,7 @@
     "print(pd.DataFrame(comparison_dict).groupby('model')['score'].max())\n",
     "\n",
     "predictions = model.predict(X_train)\n",
-    "target_names = df.driver\n",
+    "target_names = df.driver.unique()\n",
     "# Print the predictions\n",
     "newpred = np.zeros(len(predictions))\n",
     "for i in range(len(predictions)):\n",
@@ -2397,7 +2374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -2430,24 +2407,8 @@
       "      ricciardo       0.00      0.00      0.00         0\n",
       "         stroll       0.00      0.00      0.00         0\n",
       "         latifi       0.00      0.00      0.00         0\n",
-      "          perez       0.00      0.00      0.00         0\n",
-      "        leclerc       0.00      0.00      0.00         0\n",
-      "          sainz       0.00      0.00      0.00         0\n",
-      " max_verstappen       0.00      0.00      0.00         0\n",
-      "           ocon       0.00      0.00      0.00         0\n",
-      "        russell       0.00      0.00      0.00         0\n",
-      "         alonso       0.00      0.00      0.00         0\n",
-      "         bottas       0.00      0.00      0.00         0\n",
-      "          gasly       0.00      0.00      0.00         0\n",
-      "kevin_magnussen       0.00      0.00      0.00         0\n",
-      "         norris       0.00      0.00      0.00         0\n",
-      "           zhou       0.00      0.00      0.00         0\n",
-      "         stroll       0.00      0.00      0.00         0\n",
-      "      ricciardo       0.00      0.00      0.00         0\n",
-      "       hamilton       0.00      0.00      0.00         0\n",
-      "          albon       0.00      0.00      0.00         0\n",
-      "     hulkenberg       0.00      0.00      0.00         0\n",
-      "         latifi       0.00      0.00      0.00         0\n",
+      "         vettel       0.00      0.00      0.00         0\n",
+      "       de_vries       0.00      0.00      0.00         0\n",
       "\n",
       "       accuracy                           0.81       428\n",
       "      macro avg       0.03      0.02      0.02       428\n",
@@ -2478,7 +2439,7 @@
     "print(pd.DataFrame(comparison_dict).groupby('model')['score'].max())\n",
     "\n",
     "predictions = model.predict(X_train)\n",
-    "target_names = df.driver\n",
+    "target_names = df.driver.unique()\n",
     "# Print the predictions\n",
     "newpred = np.zeros(len(predictions))\n",
     "for i in range(len(predictions)):\n",
@@ -2496,7 +2457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -2539,7 +2500,7 @@
     "print(pd.DataFrame(comparison_dict).groupby('model')['score'].max())\n",
     "\n",
     "predictions = model.predict(X_train)\n",
-    "target_names = df.driver\n",
+    "target_names = df.driver.unique()\n",
     "# Print the predictions\n",
     "newpred = np.zeros(len(predictions))\n",
     "for i in range(len(predictions)):\n",
@@ -2557,7 +2518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -2601,7 +2562,7 @@
     "print(pd.DataFrame(comparison_dict).groupby('model')['score'].max())\n",
     "\n",
     "predictions = model.predict(X_train)\n",
-    "target_names = df.driver\n",
+    "target_names = df.driver.unique()\n",
     "# Print the predictions\n",
     "newpred = np.zeros(len(predictions))\n",
     "for i in range(len(predictions)):\n",
@@ -2619,7 +2580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -2668,7 +2629,7 @@
     "print(pd.DataFrame(comparison_dict).groupby('model')['score'].max())\n",
     "\n",
     "predictions = model.predict(X_train)\n",
-    "target_names = df.driver\n",
+    "target_names = df.driver.unique()\n",
     "# Print the predictions\n",
     "newpred = np.zeros(len(predictions))\n",
     "for i in range(len(predictions)):\n",
